# stem-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  report.tex
benchmark/: build_benchmark.py  fix_tasks.py  splits.json  subset.json
configs/: default.yaml
results/baselines/: vanilla_direct.json
results/bugsinpy_model_calibration/: validated_subset.json
results/differentiation/: champion_history.json  differentiation_log.jsonl  differentiation_summary.json
results/final_eval/: hand_tuned.json  no_safeguard.json  no_sensor.json  random_search.json  stem_agent.json  test_results.json  vanilla_cot.json  vanilla_direct.json
results/no_safeguard/: champion.yaml  champion_history.json  differentiation_log.jsonl  differentiation_summary.json  initial_config.yaml
results/no_sensor/: champion_history.json  differentiation_log.jsonl  differentiation_summary.json
results/random_search/: champion.yaml  champion_history.json  (+2 more)
scripts/: assign_splits.py  run_ablations.py  run_baselines.py  run_bugsinpy_model_calibration.py  run_differentiation.py  run_final_eval.py  run_model_calibration.py  run_random_search.py  run_sensor.py  smoke_test.py
src/: agent.py  baselines.py  bugsinpy_loader.py  bugsinpy_runner.py  config.py  convergence.py  differentiator.py  evaluator.py  llm_client.py  mutator.py  safeguard.py  sensor.py  splits.py  tools.py  utils.py
tests/: test_agent.py  test_config.py  test_convergence.py  test_differentiator.py  test_evaluator.py  test_mutator.py  test_safeguard.py  test_sensor.py  test_splits.py  test_tools.py  test_utils.py
(+404 files in other folders)
